# Proyecto_1_Lenguajes

./: .gitignore  CMakeLists.txt  importar.c  importar.h  main.c
data/: a.json  junio.json  memoria.json  ventas.json
